--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -40,7 +40,7 @@ slideshow-component .slideshow.banner {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 54.5rem;
+  max-width: 150px;
 }
 
 .slideshow__text > * {
